# thoth

./: .gitignore  .pre-commit-config.yaml  .thisdir  README.md  aliases.sh  config.py  database.py  google_api.py  ingest_email.py  ingest_tabs.py  init.sql  justfile  pyproject.toml  schema.sql  schema_email.sql  thoth.py  utils.sql
chrome_extension/: background.js  manifest.json  popup.html  popup.js
tests/data/: tabs.json  tabs.json 16-36-50-325.json  tabs_3.json
